@@ -7,7 +7,6 @@ import net.blancworks.figura.models.sounds.FiguraSoundManager;
 import net.blancworks.figura.network.NewFiguraNetworkManager;
 import net.blancworks.figura.trust.PlayerTrustManager;
 import net.blancworks.figura.trust.TrustContainer;
-import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.network.AbstractClientPlayerEntity;
 import net.minecraft.client.network.PlayerListEntry;
@@ -16,10 +15,10 @@ import net.minecraft.client.render.entity.PlayerEntityRenderer;
 import net.minecraft.client.render.entity.model.PlayerEntityModel;
 import net.minecraft.client.texture.TextureManager;
 import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.nbt.NbtCompound;
-import net.minecraft.nbt.NbtElement;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.NbtIo;
-import net.minecraft.nbt.NbtList;
+import net.minecraft.nbt.Tag;
 import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
 
@@ -27,6 +26,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.DataInputStream;
 import java.io.DataOutputStream;
 import java.io.FileOutputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -75,8 +75,7 @@ public class PlayerData {
     public static final int FILESIZE_LARGE_THRESHOLD = 102400;
 
     public VertexConsumerProvider getVCP() {
-        if (script != null && script.customVCP != null) return script.customVCP;
-        else if (FiguraMod.vertexConsumerProvider != null) return FiguraMod.vertexConsumerProvider;
+        if (FiguraMod.vertexConsumerProvider != null) return FiguraMod.vertexConsumerProvider;
         else return MinecraftClient.getInstance().getBufferBuilders().getEntityVertexConsumers();
     }
 
@@ -98,7 +97,7 @@ public class PlayerData {
      * @param nbt the nbt to write to
      * @return {@code true} if the player data was written into the NBT, otherwise {@code false}
      */
-    public boolean writeNbt(NbtCompound nbt) {
+    public boolean writeNbt(CompoundTag nbt) {
         //You cannot save a model that is incomplete.
         if (!hasAvatar())
             return false;
@@ -112,14 +111,14 @@ public class PlayerData {
 
         //Put Texture.
         if (texture != null) {
-            NbtCompound textureNbt = new NbtCompound();
+            CompoundTag textureNbt = new CompoundTag();
             texture.writeNbt(textureNbt);
             nbt.put("texture", textureNbt);
         }
 
         //Put Script.
         if (script != null) {
-            NbtCompound scriptNbt = new NbtCompound();
+            CompoundTag scriptNbt = new CompoundTag();
             script.toNBT(scriptNbt);
             nbt.put("script", scriptNbt);
 
@@ -133,10 +132,10 @@ public class PlayerData {
         }
 
         if (!extraTextures.isEmpty()) {
-            NbtList texList = new NbtList();
+            ListTag texList = new ListTag();
 
             for (FiguraTexture extraTexture : extraTextures) {
-                NbtCompound elytraTextureNbt = new NbtCompound();
+                CompoundTag elytraTextureNbt = new CompoundTag();
                 extraTexture.writeNbt(elytraTextureNbt);
                 texList.add(elytraTextureNbt);
             }
@@ -152,7 +151,7 @@ public class PlayerData {
      *
      * @param nbt the nbt to read
      */
-    public void readNbt(NbtCompound nbt) {
+    public void readNbt(CompoundTag nbt) {
         if (!nbt.contains("id")) return;
         playerId = nbt.getUuid("id");
 
@@ -164,7 +163,7 @@ public class PlayerData {
 
         try {
             //Create model on main thread.
-            NbtCompound modelNbt = (NbtCompound) nbt.get("model");
+            CompoundTag modelNbt = (CompoundTag) nbt.get("model");
 
             //Load model on off-thread.
             if (modelNbt != null) {
@@ -186,7 +185,7 @@ public class PlayerData {
 
         try {
             //Create texture on main thread
-            NbtCompound textureNbt = (NbtCompound) nbt.get("texture");
+            CompoundTag textureNbt = (CompoundTag) nbt.get("texture");
 
             //Load texture, if any
             if (textureNbt != null) {
@@ -201,7 +200,7 @@ public class PlayerData {
 
         try {
             if (nbt.contains("script")) {
-                NbtCompound scriptNbt = (NbtCompound) nbt.get("script");
+                CompoundTag scriptNbt = (CompoundTag) nbt.get("script");
 
                 if (scriptNbt != null) FiguraMod.doTask(() -> {
                     script = new CustomScript();
@@ -222,16 +221,16 @@ public class PlayerData {
 
         try {
             if (nbt.contains("exTexs")) {
-                NbtList textureList = (NbtList) nbt.get("exTexs");
+                ListTag textureList = (ListTag) nbt.get("exTexs");
 
                 if (textureList != null) {
-                    for (NbtElement element : textureList) {
+                    for (Tag element : textureList) {
                         FiguraTexture newTexture = new FiguraTexture();
                         newTexture.id = new Identifier("figura", playerId.toString() + newTexture.type.toString());
                         getTextureManager().registerTexture(newTexture.id, newTexture);
                         extraTextures.add(newTexture);
 
-                        FiguraMod.doTask(() -> newTexture.readNbt((NbtCompound) element));
+                        FiguraMod.doTask(() -> newTexture.readNbt((CompoundTag) element));
                     }
                 }
             }
@@ -242,7 +241,7 @@ public class PlayerData {
 
     //Returns the file size, in bytes.
     public long getFileSize() {
-        NbtCompound writtenNbt = new NbtCompound();
+        CompoundTag writtenNbt = new CompoundTag();
         this.writeNbt(writtenNbt);
 
         try {
@@ -286,26 +285,17 @@ public class PlayerData {
     }
 
     public void loadFromNbt(DataInputStream input) throws Exception {
-        NbtCompound nbt = NbtIo.readCompressed(input);
+        CompoundTag nbt = NbtIo.readCompressed(input);
         loadFromNbt(nbt);
     }
 
-    public void loadFromNbt(NbtCompound tag) {
+    public void loadFromNbt(CompoundTag tag) {
         this.readNbt(tag);
         getFileSize();
     }
 
     public TrustContainer getTrustContainer() {
         return PlayerTrustManager.getContainer(getTrustIdentifier());
-    }
-
-    public boolean canRenderCustomLayers() {
-        boolean ret = getTrustContainer().getTrust(TrustContainer.Trust.CUSTOM_RENDER_LAYER) == 1;
-
-        if (FabricLoader.getInstance().isModLoaded("iris"))
-            return ret && net.coderbot.iris.Iris.getCurrentPack().isEmpty();
-
-        return ret;
     }
 
     //Saves this playerdata to the cache.
@@ -325,13 +315,13 @@ public class PlayerData {
             Path hashFilePath = destinationPath.resolve(splitID[splitID.length - 1] + ".hsh");
 
             try {
-                NbtCompound targetTag = new NbtCompound();
+                CompoundTag targetTag = new CompoundTag();
                 this.writeNbt(targetTag);
 
                 if (!Files.exists(nbtFilePath.getParent()))
                     Files.createDirectories(nbtFilePath.getParent());
                 NbtIo.writeCompressed(targetTag, new FileOutputStream(nbtFilePath.toFile()));
-                Files.writeString(hashFilePath, this.lastHash);
+                Files.write(hashFilePath, this.lastHash.getBytes(StandardCharsets.UTF_8));
             } catch (Exception e) {
                 e.printStackTrace();
             }
@@ -346,8 +336,8 @@ public class PlayerData {
         return (model == null || model.isDone) && (script == null || script.isDone) && (texture == null || texture.isDone);
     }
 
-    private NbtElement writeCustomSoundsNBT() {
-        NbtCompound nbt = new NbtCompound();
+    private Tag writeCustomSoundsNBT() {
+        CompoundTag nbt = new CompoundTag();
 
         for (String key : script.customSounds.keySet()) {
             script.customSounds.get(key).writeNbt(nbt);
@@ -356,7 +346,7 @@ public class PlayerData {
         return nbt;
     }
 
-    private void readCustomSoundsNBT(NbtCompound nbt) {
+    private void readCustomSoundsNBT(CompoundTag nbt) {
         nbt.getKeys().forEach(key -> FiguraSoundManager.registerCustomSound(script, key, nbt.getByteArray(key), false));
     }
 
