@@ -13,20 +13,22 @@ import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.screen.ConfirmChatLinkScreen;
 import net.minecraft.client.gui.screen.ConfirmScreen;
 import net.minecraft.client.gui.screen.Screen;
+import net.minecraft.client.gui.widget.AbstractButtonWidget;
 import net.minecraft.client.gui.widget.ButtonWidget;
-import net.minecraft.client.gui.widget.ClickableWidget;
 import net.minecraft.client.render.*;
 import net.minecraft.client.render.entity.EntityRenderDispatcher;
 import net.minecraft.client.util.math.MatrixStack;
+import net.minecraft.client.util.math.Vector3f;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.text.*;
 import net.minecraft.util.Formatting;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.Util;
+import net.minecraft.util.math.Matrix4f;
 import net.minecraft.util.math.Quaternion;
-import net.minecraft.util.math.Vec3f;
 import org.lwjgl.glfw.GLFW;
 
+import java.io.File;
 import java.io.IOException;
 import java.math.RoundingMode;
 import java.nio.file.Files;
@@ -53,25 +55,25 @@ public class FiguraGuiScreen extends Screen {
     public Identifier playerBackgroundTexture = new Identifier("figura", "textures/gui/player_background.png");
     public Identifier expandedBackgroundTexture = new Identifier("figura", "textures/gui/expanded_background.png");
 
-    public static final List<Style> TEXT_COLORS = List.of(
+    public static final List<Style> TEXT_COLORS = Arrays.asList(
             Style.EMPTY.withColor(Formatting.WHITE),
             Style.EMPTY.withColor(Formatting.RED),
             Style.EMPTY.withColor(Formatting.YELLOW),
             Style.EMPTY.withColor(Formatting.GREEN)
     );
 
-    public static final List<Text> DELETE_TOOLTIP = List.of(
+    public static final List<Text> DELETE_TOOLTIP = Arrays.asList(
         new TranslatableText("figura.gui.button.deleteavatar.tooltip").setStyle(TEXT_COLORS.get(1)),
         new TranslatableText("figura.gui.button.deleteavatartwo.tooltip").setStyle(TEXT_COLORS.get(1))
     );
 
     public static final TranslatableText UPLOAD_TOOLTIP = new TranslatableText("figura.gui.button.upload.tooltip");
-    public static final List<Text> UPLOAD_LOCAL_TOOLTIP = List.of(
+    public static final List<Text> UPLOAD_LOCAL_TOOLTIP = Arrays.asList(
         new TranslatableText("figura.gui.button.uploadlocal.tooltip").setStyle(TEXT_COLORS.get(1)),
         new TranslatableText("figura.gui.button.uploadlocaltwo.tooltip").setStyle(TEXT_COLORS.get(1))
     );
 
-    public static final List<Text> NO_CONNECTION_TOOLTIP = List.of(
+    public static final List<Text> NO_CONNECTION_TOOLTIP = Arrays.asList(
             new TranslatableText("figura.gui.button.noconnection.tooltip").setStyle(TEXT_COLORS.get(1)),
             new TranslatableText("figura.gui.button.noconnectiontwo.tooltip").setStyle(TEXT_COLORS.get(1))
     );
@@ -82,7 +84,7 @@ public class FiguraGuiScreen extends Screen {
     public static final TranslatableText SCRIPT_STATUS_TEXT = new TranslatableText("figura.gui.status.script");
     public static final TranslatableText BACKEND_STATUS_TEXT = new TranslatableText("figura.gui.status.backend");
 
-    public static final List<MutableText> STATUS_INDICATORS = List.of(
+    public static final List<MutableText> STATUS_INDICATORS = Arrays.asList(
             new LiteralText("-").setStyle(Style.EMPTY.withFont(FiguraMod.FIGURA_FONT)),
             new LiteralText("*").setStyle(Style.EMPTY.withFont(FiguraMod.FIGURA_FONT)),
             new LiteralText("/").setStyle(Style.EMPTY.withFont(FiguraMod.FIGURA_FONT)),
@@ -197,8 +199,8 @@ public class FiguraGuiScreen extends Screen {
         this.searchBox.setChangedListener((string_1) -> modelFileList.filter(string_1, false));
         this.modelFileList = new ModelFileListWidget(this.client, paneWidth, this.height, paneY + 19, this.height - 36, 20, this.searchBox, this.modelFileList, this, modelFileListState);
         this.modelFileList.setLeftPos(5);
-        this.addSelectableChild(this.modelFileList);
-        this.addSelectableChild(this.searchBox);
+        this.addChild(this.modelFileList);
+        this.addChild(this.searchBox);
 
         int width = Math.min(this.width - (this.width / 2 + modelBgSize / 2 + 38), 140);
 
@@ -208,7 +210,7 @@ public class FiguraGuiScreen extends Screen {
             try {
                 if (isHoldingShift && PlayerDataManager.localPlayer.loadedPath != null) {
                     String path = PlayerDataManager.localPlayer.loadedPath;
-                    modelDir = Path.of(path);
+                    modelDir = new File(path).toPath();
 
                     if (path.endsWith(".zip"))
                         modelDir = modelDir.getParent();
@@ -221,26 +223,26 @@ public class FiguraGuiScreen extends Screen {
                 FiguraMod.LOGGER.error(e.toString());
             }
         });
-        this.addDrawableChild(openFolderButton);
+        this.addButton(openFolderButton);
 
         //back button
-        this.addDrawableChild(new ButtonWidget(this.width - 140 - 5, this.height - 20 - 5, 140, 20, new TranslatableText("figura.gui.button.back"), (buttonWidgetx) -> {
-            this.client.setScreen(parentScreen);
+        this.addButton(new ButtonWidget(this.width - 140 - 5, this.height - 20 - 5, 140, 20, new TranslatableText("figura.gui.button.back"), (buttonWidgetx) -> {
+            this.client.openScreen(parentScreen);
             LocalAvatarManager.saveFolderNbt();
         }));
 
         //trust button
-        this.addDrawableChild(new ButtonWidget(this.width - width - 5, 15, width, 20, new TranslatableText("figura.gui.button.trustmenu"), (buttonWidgetx) -> this.client.setScreen(trustScreen)));
+        this.addButton(new ButtonWidget(this.width - width - 5, 15, width, 20, new TranslatableText("figura.gui.button.trustmenu"), (buttonWidgetx) -> this.client.openScreen(trustScreen)));
 
         //config button
-        this.addDrawableChild(new ButtonWidget(this.width - width - 5, 40, width, 20, new TranslatableText("figura.gui.button.configmenu"), (buttonWidgetx) -> this.client.setScreen(configScreen)));
+        this.addButton(new ButtonWidget(this.width - width - 5, 40, width, 20, new TranslatableText("figura.gui.button.configmenu"), (buttonWidgetx) -> this.client.openScreen(configScreen)));
 
         //help button
-        this.addDrawableChild(new ButtonWidget(this.width - width - 5, 65, width, 20, new TranslatableText("figura.gui.button.help"), (buttonWidgetx) -> this.client.setScreen(new ConfirmChatLinkScreen((bl) -> {
+        this.addButton(new ButtonWidget(this.width - width - 5, 65, width, 20, new TranslatableText("figura.gui.button.help"), (buttonWidgetx) -> this.client.openScreen(new ConfirmChatLinkScreen((bl) -> {
             if (bl) {
                 Util.getOperatingSystem().open("https://github.com/Blancworks/Figura/wiki/Figura-Panel");
             }
-            this.client.setScreen(this);
+            this.client.openScreen(this);
         }, "https://github.com/Blancworks/Figura/wiki/Figura-Panel", true))));
 
         //keybinds button
@@ -249,9 +251,9 @@ public class FiguraGuiScreen extends Screen {
                 20, 20,
                 0, 0, 20,
                 keybindsTexture, 40, 40,
-                (bx) -> this.client.setScreen(keyBindsScreen)
+                (bx) -> this.client.openScreen(keyBindsScreen)
         );
-        this.addDrawableChild(keybindsButton);
+        this.addButton(keybindsButton);
         keybindsButton.active = false;
 
         //delete button
@@ -265,7 +267,7 @@ public class FiguraGuiScreen extends Screen {
                         FiguraMod.networkManager.deleteAvatar();
                 }
         );
-        this.addDrawableChild(deleteButton);
+        this.addButton(deleteButton);
         deleteButton.active = false;
 
         //upload button
@@ -276,7 +278,7 @@ public class FiguraGuiScreen extends Screen {
                 uploadTexture, 50, 50,
                 (bx) -> FiguraMod.networkManager.postAvatar().thenRun(() -> System.out.println("UPLOADED AVATAR"))
         );
-        this.addDrawableChild(uploadButton);
+        this.addButton(uploadButton);
 
         //reload local button
         reloadButton = new TexturedButtonWidget(
@@ -286,7 +288,7 @@ public class FiguraGuiScreen extends Screen {
                 reloadTexture, 25, 50,
                 (bx) -> PlayerDataManager.clearLocalPlayer()
         );
-        this.addDrawableChild(reloadButton);
+        this.addButton(reloadButton);
 
         //expand button
         expandButton = new TexturedButtonWidget(
@@ -299,7 +301,7 @@ public class FiguraGuiScreen extends Screen {
                     updateExpand();
                 }
         );
-        this.addDrawableChild(expandButton);
+        this.addButton(expandButton);
 
         //init updates
         LocalAvatarManager.loadFolderNbt();
@@ -310,7 +312,7 @@ public class FiguraGuiScreen extends Screen {
 
     @Override
     public void onClose() {
-        this.client.setScreen(parentScreen);
+        this.client.openScreen(parentScreen);
         LocalAvatarManager.saveFolderNbt();
     }
 
@@ -335,12 +337,12 @@ public class FiguraGuiScreen extends Screen {
             this.renderBackgroundTexture(0);
 
             //draw player preview
-            RenderSystem.setShaderTexture(0, playerBackgroundTexture);
+            MinecraftClient.getInstance().getTextureManager().bindTexture(playerBackgroundTexture);
             drawTexture(matrices, this.width / 2 - modelBgSize / 2, this.height / 2 - modelBgSize / 2, 0, 0, modelBgSize, modelBgSize, modelBgSize, modelBgSize);
         }
         else {
             //draw background
-            RenderSystem.setShaderTexture(0, expandedBackgroundTexture);
+            MinecraftClient.getInstance().getTextureManager().bindTexture(expandedBackgroundTexture);
             this.renderAsBackground(0);
 
             //render expand button 3:
@@ -444,9 +446,8 @@ public class FiguraGuiScreen extends Screen {
     public void renderAsBackground(int vOffset) {
         Tessellator tessellator = Tessellator.getInstance();
         BufferBuilder bufferBuilder = tessellator.getBuffer();
-        RenderSystem.setShader(GameRenderer::getPositionTexColorShader);
-        RenderSystem.setShaderColor(1f, 1f, 1f, 1f);
-        bufferBuilder.begin(VertexFormat.DrawMode.QUADS, VertexFormats.POSITION_TEXTURE_COLOR);
+        RenderSystem.color4f(1f, 1f, 1f, 1f);
+        bufferBuilder.begin(7, VertexFormats.POSITION_TEXTURE_COLOR);
         bufferBuilder.vertex(0f, this.height, 0f).texture(0f, this.height / 32f + vOffset).color(255, 255, 255, 255).next();
         bufferBuilder.vertex(this.width, this.height, 0f).texture(this.width / 32f, this.height / 32f + vOffset).color(255, 255, 255, 255).next();
         bufferBuilder.vertex(this.width, 0f, 0f).texture(this.width / 32f, vOffset).color(255, 255, 255, 255).next();
@@ -528,8 +529,8 @@ public class FiguraGuiScreen extends Screen {
         expandButton.setTexture(expand ? expandInverseTexture : expandTexture);
         if (expand) {
             this.children().forEach(child -> {
-                if (child instanceof ClickableWidget widget)
-                    widget.visible = false;
+                if (child instanceof AbstractButtonWidget)
+                    ((AbstractButtonWidget) child).visible = false;
             });
 
             expandButton.setPos(5, 5);
@@ -538,8 +539,8 @@ public class FiguraGuiScreen extends Screen {
             modelFileList.updateSize(0, 0, this.height, 0);
         } else {
             this.children().forEach(child -> {
-                if (child instanceof ClickableWidget widget)
-                    widget.visible = true;
+                if (child instanceof AbstractButtonWidget)
+                    ((AbstractButtonWidget) child).visible = true;
             });
 
             expandButton.setPos(Math.max(this.width / 2 - modelBgSize / 2, paneWidth + 5), this.height / 2 - modelBgSize / 2 + 1);
@@ -704,7 +705,7 @@ public class FiguraGuiScreen extends Screen {
             ovo++;
             if (ovo >= OvO.length) {
                 ovo = 0;
-                this.client.setScreen(new NewFiguraGuiScreen(this));
+                this.client.openScreen(new NewFiguraGuiScreen(this));
             }
         } else if (ovo != 2 || keyCode != 265) {
             ovo = 0;
@@ -732,7 +733,7 @@ public class FiguraGuiScreen extends Screen {
         super.filesDragged(paths);
 
         String string = paths.stream().map(Path::getFileName).map(Path::toString).collect(Collectors.joining(", "));
-        this.client.setScreen(new ConfirmScreen((bl) -> {
+        this.client.openScreen(new ConfirmScreen((bl) -> {
             Path destPath = LocalPlayerData.getContentDirectory();
             if (bl) {
                 paths.forEach((path2) -> {
@@ -760,38 +761,39 @@ public class FiguraGuiScreen extends Screen {
 
                 });
             }
-            this.client.setScreen(this);
+            this.client.openScreen(this);
         }, new TranslatableText("figura.gui.dropconfirm"), new LiteralText(string)));
     }
 
     public static void drawEntity(int x, int y, int size, float rotationX, float rotationY, LivingEntity entity) {
-        MatrixStack matrixStack = RenderSystem.getModelViewStack();
-        matrixStack.push();
-        matrixStack.translate(x, y, 1500.0D);
-        matrixStack.scale(1.0F, 1.0F, -1.0F);
-        RenderSystem.applyModelViewMatrix();
-        MatrixStack matrixStack2 = new MatrixStack();
-        matrixStack2.translate(0.0D, 0.0D, 1000.0D);
-        matrixStack2.scale((float) size, (float) size, (float) size);
-        Quaternion quaternion = Vec3f.POSITIVE_Z.getDegreesQuaternion(180.0F);
-        Quaternion quaternion2 = Vec3f.POSITIVE_X.getDegreesQuaternion(rotationX);
+        RenderSystem.pushMatrix();
+        RenderSystem.translatef((float) x, (float) y, 1500.0F);
+        RenderSystem.scalef(1.0F, 1.0F, -1.0F);
+        MatrixStack matrixStack = new MatrixStack();
+        matrixStack.translate(0.0D, 0.0D, 1000.0D);
+        matrixStack.scale((float) size, (float) size, (float) size);
+        Quaternion quaternion = Vector3f.POSITIVE_Z.getDegreesQuaternion(180.0F);
+        Quaternion quaternion2 = Vector3f.POSITIVE_X.getDegreesQuaternion(rotationX);
         quaternion.hamiltonProduct(quaternion2);
-        matrixStack2.multiply(quaternion);
+        matrixStack.multiply(quaternion);
         float h = entity.bodyYaw;
-        float i = entity.getYaw();
-        float j = entity.getPitch();
+        float i = entity.yaw;
+        float j = entity.pitch;
         float k = entity.prevHeadYaw;
         float l = entity.headYaw;
         boolean invisible = entity.isInvisible();
         entity.bodyYaw = 180.0F - rotationY;
-        entity.setYaw(180.0F - rotationY);
-        entity.setPitch(0.0F);
-        entity.headYaw = entity.getYaw();
-        entity.prevHeadYaw = entity.getYaw();
+        entity.yaw = 180.0F - rotationY;
+        entity.pitch = 0.0F;
+        entity.headYaw = entity.yaw;
+        entity.prevHeadYaw = entity.yaw;
         entity.setInvisible(false);
         showOwnNametag = (boolean) Config.PREVIEW_NAMEPLATE.value;
         renderFireOverlay = false;
-        DiffuseLighting.method_34742();
+        Matrix4f light = new Matrix4f();
+        light.loadIdentity();
+        light.multiply(Vector3f.POSITIVE_X.getDegreesQuaternion(180f));
+        DiffuseLighting.method_27869(light);
         EntityRenderDispatcher entityRenderDispatcher = MinecraftClient.getInstance().getEntityRenderDispatcher();
         quaternion2.conjugate();
         entityRenderDispatcher.setRotation(quaternion2);
@@ -800,20 +802,19 @@ public class FiguraGuiScreen extends Screen {
         int box = modelBgSize * guiScale;
         if (!expand)
             RenderSystem.enableScissor(x * guiScale - box / 2, y * guiScale - box / 2, box, box);
-        RenderSystem.runAsFancy(() -> entityRenderDispatcher.render(entity, 0.0D, -1.0D, 0.0D, 0.0F, 1.0F, matrixStack2, immediate, 15728880));
+        RenderSystem.runAsFancy(() -> entityRenderDispatcher.render(entity, 0.0D, -1.0D, 0.0D, 0.0F, 1.0F, matrixStack, immediate, 15728880));
         RenderSystem.disableScissor();
         immediate.draw();
         entityRenderDispatcher.setRenderShadows(true);
         entity.bodyYaw = h;
-        entity.setYaw(i);
-        entity.setPitch(j);
+        entity.yaw = i;
+        entity.pitch = j;
         entity.prevHeadYaw = k;
         entity.headYaw = l;
         entity.setInvisible(invisible);
         showOwnNametag = false;
         renderFireOverlay = true;
-        matrixStack.pop();
-        RenderSystem.applyModelViewMatrix();
+        RenderSystem.popMatrix();
         DiffuseLighting.enableGuiDepthLighting();
     }
 }
